sample/helloworld/sample.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: route-example
  namespace: default
spec:
  traffic:
  - configurationName: configuration-example
    percent: 100
