sample/helloworld/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: timeouttest
  namespace: default
spec:
  hosts:
  - configuration-example-00001-service.default.svc.cluster.local
  http:
    - route:
      - destination:
          host: configuration-example-00001-service.default.svc.cluster.local
          port:
            number: 80
        weight: 100
      timeout: 1s
      appendHeaders:
        x-envoy-upstream-rq-timeout-ms: "0"
